experimentData/JavaFuzzer/FernFlower-detailedExperimentData/errorSamples/410/log-1-410.log
INFO:  Decompiling class Test
INFO:  ... done
INFO:  Decompiling class FuzzerUtils
INFO:  ... done

Test.java:78: error: incompatible types: possible lossy conversion from float to int
            int var10001 = fFld--;
                               ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

